--- a/project/jni/application/xserver-debian/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver-debian/AndroidAppSettings.cfg
@@ -1,16 +1,16 @@
 # The application settings for Android libSDL port
 
 # Specify application name (e.x. My Application)
-AppName="Debian xx"
+AppName="Debian"
 
 # Specify reversed site name of application (e.x. com.mysite.myapp)
 AppFullName=com.cuntubuntu.xx
 
 # Application version code (integer)
-AppVersionCode=150627
+AppVersionCode=150828
 
 # Application user-visible version name (string)
-AppVersionName="15.06.27"
+AppVersionName="15.08.28"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -21,10 +21,10 @@ AppVersionName="15.06.27"
 AppDataDownloadUrl="!!Data files|:data.tar.xz:obb:main.150626|:data.tar.xz:http://sourceforge.net/projects/libsdl-android/files/ubuntu/jessie/dist-debian-jessie.tar.xz/download^!!XSDL data files|:data-1.tar.gz:data-1.tgz^!!XSDL fonts|:DroidSansMono.ttf:DroidSansMono.ttf^!!Postinstall script|:postinstall.sh:postinstall.sh^!!Loading image|:loading.gif:loading.gif^!!Update 1|:update1.tar.gz:update1-<ARCH>.tgz"
 
 # Reset SDL config when updating application to the new version (y) / (n)
-ResetSdlConfigForThisVersion=y
+ResetSdlConfigForThisVersion=n
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
-DeleteFilesOnUpgrade="postinstall.sh libsdl-DownloadFinished-1.flag libsdl-DownloadFinished-2.flag libsdl-DownloadFinished-3.flag libsdl-DownloadFinished-4.flag libsdl-DownloadFinished-5.flag libsdl-DownloadFinished-6.flag libsdl-DownloadFinished-7.flag libsdl-DownloadFinished-8.flag libsdl-DownloadFinished-9.flag libsdl-DownloadFinished-10.flag libsdl-DownloadFinished-11.flag libsdl-DownloadFinished-12.flag libsdl-DownloadFinished-13.flag libsdl-DownloadFinished-14.flag libsdl-DownloadFinished-15.flag"
+DeleteFilesOnUpgrade="%"
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines (that's four backslashes)^de:Text in Deutsch^ru:Text in Russian^button:Button that will open some URL:http://url-to-open/
