Debian and Gimp: bump version

--- a/project/jni/application/xserver-debian/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver-debian/AndroidAppSettings.cfg
@@ -4,13 +4,13 @@
 AppName="Debian"
 
 # Specify reversed site name of application (e.x. com.mysite.myapp)
-AppFullName=com.cuntubuntu.xx
+AppFullName=com.cuntubuntu
 
 # Application version code (integer)
-AppVersionCode=150828
+AppVersionCode=150831
 
 # Application user-visible version name (string)
-AppVersionName="15.08.28"
+AppVersionName="15.08.31"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
