--- a/project/jni/application/supertux/AndroidAppSettings.cfg
+++ b/project/jni/application/supertux/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="SuperTux"
 AppFullName=org.lethargik.supertux2
 
 # Application version code (integer)
-AppVersionCode=03508
+AppVersionCode=04008
 
 # Application user-visible version name (string)
-AppVersionName="0.3.5a.08"
+AppVersionName="0.4.0.08"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -18,13 +18,13 @@ AppVersionName="0.3.5a.08"
 # If the URL does not contain 'http://' it is treated as file from 'project/jni/application/src/AndroidData' dir -
 # these files are put inside .apk package by build system
 # You can specify Google Play expansion files in the form 'obb:main.12345' or 'obb:patch.12345' where 12345 is the app version, first associated with the file
-AppDataDownloadUrl="!Data files|:data.zip:obb:main.3508|:data.zip:http://sourceforge.net/projects/libsdl-android/files/SuperTux/data-4.zip^!SSL certificates|:ca-certificates.crt:ca-certificates.crt"
+AppDataDownloadUrl="!Data files|:data.zip:obb:main.4008|:data.zip:http://sourceforge.net/projects/libsdl-android/files/SuperTux/data-5.zip^!SSL certificates|:ca-certificates.crt:ca-certificates.crt"
 
 # Reset SDL config when updating application to the new version (y) / (n)
-ResetSdlConfigForThisVersion=n
+ResetSdlConfigForThisVersion=y
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
-DeleteFilesOnUpgrade=""
+DeleteFilesOnUpgrade="fonts images levels locale music scripts sounds speech"
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines (that's four backslashes)^de:Text in Deutsch^ru:Text in Russian^button:Button that will open some URL:http://url-to-open/
@@ -80,6 +80,14 @@ CompatibilityHacksStaticInit=n
 # On-screen Android soft text input emulates hardware keyboard, this will only work with Hackers Keyboard app (y)/(n)
 CompatibilityHacksTextInputEmulatesHwKeyboard=n
 
+# Built-in text input keyboards with custom layouts for emulators, requires CompatibilityHacksTextInputEmulatesHwKeyboard=y
+# 0 or empty - standard Android keyboard
+# 1 - Simple QWERTY keyboard, no function keys, no arrow keys
+# 2 - Commodore 64 keyboard
+# 3 - Amiga keyboard
+# 4 - Atari800 keyboard
+TextInputKeyboard=
+
 # Hack for broken devices: prevent audio chopping, by sleeping a bit after pushing each audio chunk (y)/(n)
 CompatibilityHacksPreventAudioChopping=n
 
@@ -113,6 +121,9 @@ RightMouseButtonLongPress=n
 # Show SDL mouse cursor, for applications that do not draw cursor at all (y) or (n)
 ShowMouseCursor=n
 
+# Screen follows mouse cursor, when it's covered by soft keyboard, this works only in software video mode (y) or (n)
+ScreenFollowsMouse=
+
 # Generate more touch events, by default SDL generates one event per one video frame, this is useful for drawing apps (y) or (n)
 GenerateSubframeTouchEvents=n
 
@@ -144,6 +155,9 @@ AppUsesAccelerometer=n
 
 # Application uses gyroscope (y) or (n), the gyroscope will be used as joystick 1 axes 2-4
 AppUsesGyroscope=n
+
+# Application uses orientation sensor (y) or (n), reported as joystick 1 axes 8-10
+AppUsesOrientationSensor=
 
 # Use gyroscope to move mouse cursor (y) or (n), it eats battery, and can be disabled in settings, do not use with AppUsesGyroscope setting
 MoveMouseWithGyroscope=n
@@ -188,10 +202,16 @@ RedefinedKeysScreenKb="SPACE LCTRL"
 RedefinedKeysScreenKbNames="Jump Action"
 
 # On-screen keys theme
-# 0 = Ultimate Droid by Sean Stieber (green, with gamepad joystick)
-# 1 = Simple Theme by Beholder (white, with gamepad joystick)
+# 0 = Ultimate Droid by Sean Stieber (green, with cross joystick)
+# 1 = Simple Theme by Beholder (white, with cross joystick)
 # 2 = Sun by Sirea (yellow, with round joystick)
 # 3 = Keen by Gerstrong (multicolor, with round joystick)
+# 4 = Retro by Santiago Radeff (red/white, with cross joystick)
+# 5 = GameBoy from RetroArch
+# 6 = PlayStation from RetroArch
+# 7 = SuperNintendo from RetroArch
+# 8 = DualShock from RetroArch
+# 9 = Nintendo64 from RetroArch
 TouchscreenKeysTheme=3
 
 # Redefine gamepad keys to SDL keysyms, button order is:
