--- a/project/jni/application/supertux/AndroidAppSettings.cfg
+++ b/project/jni/application/supertux/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="SuperTux"
 AppFullName=org.lethargik.supertux2
 
 # Application version code (integer)
-AppVersionCode=04008
+AppVersionCode=04009
 
 # Application user-visible version name (string)
-AppVersionName="0.4.0.08"
+AppVersionName="0.4.0.09"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -21,10 +21,10 @@ AppVersionName="0.4.0.08"
 AppDataDownloadUrl="!Data files|:data.zip:obb:main.4008|:data.zip:http://sourceforge.net/projects/libsdl-android/files/SuperTux/data-5.zip^!SSL certificates|:ca-certificates.crt:ca-certificates.crt"
 
 # Reset SDL config when updating application to the new version (y) / (n)
-ResetSdlConfigForThisVersion=y
+ResetSdlConfigForThisVersion=n
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
-DeleteFilesOnUpgrade="fonts images levels locale music scripts sounds speech"
+DeleteFilesOnUpgrade="%"
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines (that's four backslashes)^de:Text in Deutsch^ru:Text in Russian^button:Button that will open some URL:http://url-to-open/
