--- a/project/jni/application/basiliskii/AndroidAppSettings.cfg
+++ b/project/jni/application/basiliskii/AndroidAppSettings.cfg
@@ -135,7 +135,7 @@ AppUsesMultitouch=y
 AppRecordsAudio=n
 
 # Application needs to access SD card. If your data files are bigger than 5 Mb, enable it. (y) / (n)
-AccessSdCard=
+AccessSdCard=y
 
 # Immersive mode - Android will hide on-screen Home/Back keys. Looks bad if you invoke Android keyboard. (y) / (n)
 ImmersiveMode=
