--- a/project/jni/application/test-gyro/AndroidAppSettings.cfg
+++ b/project/jni/application/test-gyro/AndroidAppSettings.cfg
@@ -170,7 +170,7 @@ AppUsesMultitouch=n
 AppRecordsAudio=n
 
 # Application needs to access SD card. If your data files are bigger than 5 Mb, enable it. (y) / (n)
-AccessSdCard=y
+AccessSdCard=
 
 # Application needs Internet access. If you disable it, you'll have to bundle all your data files inside .apk (y) / (n)
 AccessInternet=
