--- a/project/jni/application/test-record-audio/AndroidAppSettings.cfg
+++ b/project/jni/application/test-record-audio/AndroidAppSettings.cfg
@@ -1,7 +1,7 @@
 # The application settings for Android libSDL port
 
 # Specify application name (e.x. My Application)
-AppName="Ballfield"
+AppName="AudioRecordTest"
 
 # Specify reversed site name of application (e.x. com.mysite.myapp)
 AppFullName=net.olofson.ballfield
